[gd_scene load_steps=13 format=3 uid="uid://d0v5vba2cndww"]

[ext_resource type="PackedScene" uid="uid://bg3se6ow6a6si" path="res://scenes/component/velocity_component.tscn" id="1_flc1l"]
[ext_resource type="Script" path="res://scenes/game_object/projectile/missile.gd" id="1_ndat8"]
[ext_resource type="PackedScene" uid="uid://dy1ukbli5hfms" path="res://scenes/component/rotation_component.tscn" id="2_mqu8s"]
[ext_resource type="PackedScene" uid="uid://cbuvjywj3yrf3" path="res://scenes/component/targeting_component.tscn" id="3_g3ycj"]
[ext_resource type="PackedScene" uid="uid://cm0gcg1tcv76f" path="res://scenes/component/trail_component.tscn" id="4_2obxo"]
[ext_resource type="Texture2D" uid="uid://cx0eonlr002og" path="res://assets/tiles.png" id="5_0hebo"]
[ext_resource type="PackedScene" uid="uid://lepdapn4l4b4" path="res://scenes/component/hitbox_component.tscn" id="5_aob0v"]
[ext_resource type="Texture2D" uid="uid://bu2eyxhyb6u07" path="res://assets/2d_lights_and_shadows_neutral_point_light.webp" id="6_5xjxk"]
[ext_resource type="PackedScene" uid="uid://dd8uaje5u4kvn" path="res://scenes/component/basic_spawn_component.tscn" id="7_ic24g"]
[ext_resource type="PackedScene" uid="uid://dysgtck1tag0j" path="res://scenes/game_object/aoe/aoe.tscn" id="9_hpp5f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gj0mt"]
atlas = ExtResource("5_0hebo")
region = Rect2(4, 19, 8, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_lxb2p"]
radius = 30.0

[node name="Missile" type="Node2D"]
script = ExtResource("1_ndat8")

[node name="VelocityComponent" parent="." instance=ExtResource("1_flc1l")]
max_speed = 600

[node name="RotationComponent" parent="." node_paths=PackedStringArray("pivot_node") instance=ExtResource("2_mqu8s")]
pivot_node = NodePath("../Pivot")
rotation_speed = 20.0

[node name="Pivot" type="Node2D" parent="."]

[node name="TrailComponent" parent="Pivot" instance=ExtResource("4_2obxo")]
width = 5.2
is_emitting = true
resolution = 10.0
lifetime = 0.3

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
rotation = 1.5708
texture = SubResource("AtlasTexture_gj0mt")

[node name="PointLight2D" type="PointLight2D" parent="Pivot"]
energy = 0.28
shadow_enabled = true
texture = ExtResource("6_5xjxk")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="TargetingComponent" parent="." instance=ExtResource("3_g3ycj")]

[node name="HitboxComponent" parent="." instance=ExtResource("5_aob0v")]
collision_layer = 4
collision_mask = 4
damage = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_lxb2p")

[node name="BasicSpawnerComponent" parent="." instance=ExtResource("7_ic24g")]
to_spawn_scene = ExtResource("9_hpp5f")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="hit" from="HitboxComponent" to="." method="_on_hitbox_component_hit"]
